Fixes problem in which images were not showing up in slide show in no-js mode.

--- a/src/sass/partials/_no_js.scss
+++ b/src/sass/partials/_no_js.scss
@@ -64,6 +64,12 @@
 	.blog-entry.closed::before {
 		display:none;
 	}
-
+	button.slide-button { 
+		display:none;
+	}
+	.gallery-count {
+		display:none;
+	}
 }
+
 
